--- a/modules/sso/sso/install
+++ b/modules/sso/sso/install
@@ -2,17 +2,18 @@
 
 set -e
 
-SOURCES_DIR=/tmp/artifacts
+SOURCES_DIR="/tmp/artifacts"
+SERVER_OVERLAY_ARCHIVE="keycloak-server-overlay.zip"
 
-unzip -o $SOURCES_DIR/rh-sso-server-overlay.zip -d $JBOSS_HOME
+unzip -o ${SOURCES_DIR}/${SERVER_OVERLAY_ARCHIVE} -d "${JBOSS_HOME}"
 
-pushd $JBOSS_HOME/bin
+pushd "${JBOSS_HOME}/bin"
 ./jboss-cli.sh --file=keycloak-install.cli
 popd
 
 # Clean up the left-over content of the history directory
-rm -rf "$JBOSS_HOME/standalone/configuration/standalone_xml_history/current"
+rm -rf "${JBOSS_HOME}/standalone/configuration/standalone_xml_history/current"
 
-chown -R jboss:root $JBOSS_HOME
-chmod 0755 $JBOSS_HOME
-chmod -R g+rwX $JBOSS_HOME
+chown -R jboss:root "${JBOSS_HOME}"
+chmod 0755 "${JBOSS_HOME}"
+chmod -R g+rwX "${JBOSS_HOME}"
